# sql-optimization-openenv

./: .gitignore  .rebuild  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  inference.py  login_hf.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
env/: __init__.py  environment.py
server/: __init__.py  app.py
tests/: test_environment.py
